// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть количество сидений из seatsTypes для марки BMW 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 2-местный",
    "humanSeats": "2-местный",
    "key": "BMW_2",
    "params": Object {
      "catalog_equipment": "seats-2",
    },
    "renderAtFooter": true,
    "value": "seats-2",
  },
  Object {
    "crossLinkText": "BMW 5-местный",
    "humanSeats": "5-местный",
    "key": "BMW_5",
    "params": Object {
      "catalog_equipment": "seats-5",
    },
    "renderAtFooter": true,
    "value": "seats-5",
  },
  Object {
    "crossLinkText": "BMW 6-местный",
    "humanSeats": "6-местный",
    "key": "BMW_6",
    "params": Object {
      "catalog_equipment": "seats-6",
    },
    "renderAtFooter": true,
    "value": "seats-6",
  },
  Object {
    "crossLinkText": "BMW 7-местный",
    "humanSeats": "7-местный",
    "key": "BMW_7",
    "params": Object {
      "catalog_equipment": "seats-7",
    },
    "renderAtFooter": true,
    "value": "seats-7",
  },
]
`;

exports[`Должен вернуть количество сидений из seatsTypes для марки BMW и модели 3ER 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 3 серии 2-местный",
    "humanSeats": "2-местный",
    "key": "BMW_2",
    "params": Object {
      "catalog_equipment": "seats-2",
    },
    "renderAtFooter": true,
    "value": "seats-2",
  },
  Object {
    "crossLinkText": "BMW 3 серии 5-местный",
    "humanSeats": "5-местный",
    "key": "BMW_5",
    "params": Object {
      "catalog_equipment": "seats-5",
    },
    "renderAtFooter": true,
    "value": "seats-5",
  },
  Object {
    "crossLinkText": "BMW 3 серии 6-местный",
    "humanSeats": "6-местный",
    "key": "BMW_6",
    "params": Object {
      "catalog_equipment": "seats-6",
    },
    "renderAtFooter": true,
    "value": "seats-6",
  },
  Object {
    "crossLinkText": "BMW 3 серии 7-местный",
    "humanSeats": "7-местный",
    "key": "BMW_7",
    "params": Object {
      "catalog_equipment": "seats-7",
    },
    "renderAtFooter": true,
    "value": "seats-7",
  },
]
`;
